--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>com.qiniu</groupId>
+			<artifactId>qiniu-java-sdk</artifactId>
+			<version>7.0.0</version>
+		</dependency>
 		
 	</dependencies>
 
