--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 #端口号
-server.port: 6666
+server.port: 8087
 
 #七牛云存储配置
 com.qiniu.storage.accessKey = kk-Lksnb3Ng30agmIz8OMfUMsIbDYeZrXauujiIK
 com.qiniu.storage.secretKey = rqqEgM-tMkZv-w--on3k_HLaV7uHsC56erLBfywE
-com.qiniu.storage.domain = osiav5mk.bkt.clouddn.com
+com.qiniu.storage.domain = http://osiav5mk.bkt.clouddn.com/
+com.qiniu.storage.bucketName = heat-stone
