--- a/pom.xml
+++ b/pom.xml
@@ -88,10 +88,10 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- 安全 -->
-		<dependency>  
+<!-- 		<dependency>  
 	        <groupId>org.springframework.boot</groupId>  
 	        <artifactId>spring-boot-starter-security</artifactId>  
-		</dependency>
+		</dependency> -->
 		<!--swagger自动生成代码依赖 -->
 		<dependency>
 			<groupId>io.swagger</groupId>
@@ -149,25 +149,11 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.1.15</version>
 		</dependency>
-		<!-- fastdfs -->
-		<dependency>
-			<groupId>com.wangku.wjf.upload</groupId>
-			<artifactId>wjf-upload-fastdfs</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<!-- 版本冲突 -->
-			<exclusions>
-				<exclusion>
-					<groupId>org.mybatis</groupId>
-					<artifactId>mybatis-spring</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
 		<dependency>
 			<groupId>com.qiniu</groupId>
 			<artifactId>qiniu-java-sdk</artifactId>
-			<version>7.0.0</version>
+			<version>7.2.0</version>
 		</dependency>
-		
 	</dependencies>
 
 	<build>
