--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port: 8087
 
 #七牛云存储配置
-com.qiniu.storage.accessKey = kk-Lksnb3Ng30agmIz8OMfUMsIbDYeZrXauujiIK
-com.qiniu.storage.secretKey = rqqEgM-tMkZv-w--on3k_HLaV7uHsC56erLBfywE
-com.qiniu.storage.domain = http://osiav5mk.bkt.clouddn.com/
+com.qiniu.storage.accessKey = YPjo-AehHWZnR-xvCuY7hS-5vQ6AwO40Th2D76Co
+com.qiniu.storage.secretKey = 4yB_PeHEcMLsfEoC6iwxYoQn0WMbC8atHrUnsrXr
+com.qiniu.storage.domain = http://oslkcublz.bkt.clouddn.com/
 com.qiniu.storage.bucketName = heat-stone
