--- a/pom.xml
+++ b/pom.xml
@@ -53,11 +53,11 @@
 			<artifactId>spring-cloud-starter-feign</artifactId>
 		</dependency>
 		<!-- log4j -->
-		<dependency>
+<!-- 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-log4j</artifactId>
 			<version>1.3.5.RELEASE</version>
-		</dependency>
+		</dependency> -->
 		<!--spring-boot监控通知依赖 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -150,19 +150,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-freemarker</artifactId>
-		</dependency>
-		<!-- fastdfs -->
-		<dependency>
-			<groupId>com.wangku.wjf.upload</groupId>
-			<artifactId>wjf-upload-fastdfs</artifactId>
-			<version>1.0-SNAPSHOT</version>
-			<!-- 版本冲突 -->
-			<exclusions>
-				<exclusion>
-					<groupId>org.mybatis</groupId>
-					<artifactId>mybatis-spring</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.qiniu</groupId>
