--- a/pom.xml
+++ b/pom.xml
@@ -156,7 +156,11 @@
 			<artifactId>qiniu-java-sdk</artifactId>
 			<version>7.2.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.koubei.sdk</groupId>
+			<artifactId>koubei-sdk</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
